--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "presentations-en.doc.tar.xz": 13e8201a1c54eaffa2f6627c3e963e9c16e33bad
-  "presentations-en.tar.xz": 8fbd9f7b88ae33a29dfd487d2b9a642c33a7cc09
+  presentations-en.doc.tar.xz: 54e5a46f9f1a4f7130987c351e6454b1412fd717
+  presentations-en.tar.xz: 26e9ac9872afc1fd48b8ececafbe3fc02a40217e
