--- a/.abf.yml
+++ b/.abf.yml
@@ -1,1 +1,3 @@
 sources:
+  presentations-en.doc.tar.xz: 6bbfa0e55e0beb25725cdfc7a3721e896ddea7ef
+  presentations-en.tar.xz: 69a34ad6b12c4ebcd9ebe0fe691754b0e5a1c0ba
